make a connection and get the battery procent

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,3 +32,6 @@ rosbuild_add_executable(example1_a src/exampler/example1_a.cpp)
 rosbuild_add_executable(example1_b src/exampler/example1_b.cpp)
 rosbuild_add_executable(example2_a src/exampler/example2_a.cpp)
 rosbuild_add_executable(example2_b src/exampler/example2_b.cpp)
+rosbuild_add_executable(example3_a src/exampler/example3_a.cpp)
+rosbuild_add_executable(example3_b src/exampler/example3_b.cpp)
+rosbuild_add_executable(get_battery src/Get_Battery/get_battery.cpp)
