Make a node (Fly1234) that make the drone takeoff - fly for 10 sec - and then land again

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,3 +35,4 @@ rosbuild_add_executable(example2_b src/exampler/example2_b.cpp)
 rosbuild_add_executable(example3_a src/exampler/example3_a.cpp)
 rosbuild_add_executable(example3_b src/exampler/example3_b.cpp)
 rosbuild_add_executable(get_battery src/Get_Battery/get_battery.cpp)
+rosbuild_add_executable(Fly1234 src/Fly/fly.cpp)
