--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,3 +37,6 @@ rosbuild_add_executable(example3_b src/exampler/example3_b.cpp)
 rosbuild_add_executable(get_battery src/test/Get_Battery/get_battery.cpp)
 rosbuild_add_executable(Fly1234 src/test/Fly/fly.cpp)
 rosbuild_add_executable(multithred src/test/Multithred/multithred.cpp)
+rosbuild_add_executable(flypath1 src/test/FlyPath/FlyPath1.cpp)
+rosbuild_add_executable(flypath1_0 src/test/FlyPath/FlyPath1-0.cpp)
+rosbuild_add_executable(ARDrone_manual_test src/test/FromTheInternet/ARDrone_manual_test.cpp)
