redesign flypath1 to flypath2
Now it should be easier to maniten and design

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,5 +38,5 @@ rosbuild_add_executable(get_battery src/test/Get_Battery/get_battery.cpp)
 rosbuild_add_executable(Fly1234 src/test/Fly/fly.cpp)
 rosbuild_add_executable(multithred src/test/Multithred/multithred.cpp)
 rosbuild_add_executable(flypath1 src/test/FlyPath/FlyPath1.cpp)
-rosbuild_add_executable(flypath1_0 src/test/FlyPath/FlyPath1-0.cpp)
 rosbuild_add_executable(ARDrone_manual_test src/test/FromTheInternet/ARDrone_manual_test.cpp)
+rosbuild_add_executable(flypath2 src/test/FlyPath/FlyPath2.cpp)
