--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,3 +40,4 @@ rosbuild_add_executable(multithred src/test/Multithred/multithred.cpp)
 rosbuild_add_executable(flypath1 src/test/FlyPath/FlyPath1.cpp)
 rosbuild_add_executable(ARDrone_manual_test src/test/FromTheInternet/ARDrone_manual_test.cpp)
 rosbuild_add_executable(flypath2 src/test/FlyPath/FlyPath2.cpp)
+rosbuild_add_executable(CDIO-Gruppe-15 src/Final_Project/main.cpp src/Final_Project/Drone_controllor.cpp)
