--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,6 +34,7 @@ rosbuild_add_executable(example2_a src/exampler/example2_a.cpp)
 rosbuild_add_executable(example2_b src/exampler/example2_b.cpp)
 rosbuild_add_executable(example3_a src/exampler/example3_a.cpp)
 rosbuild_add_executable(example3_b src/exampler/example3_b.cpp)
+rosbuild_add_executable(image_test src/openCV/test.cpp)
 rosbuild_add_executable(get_battery src/test/Get_Battery/get_battery.cpp)
 rosbuild_add_executable(Fly1234 src/test/Fly/fly.cpp)
 rosbuild_add_executable(multithred src/test/Multithred/multithred.cpp)
