Created working qr_reader node

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,19 +28,7 @@ rosbuild_gensrv()
 #rosbuild_link_boost(${PROJECT_NAME} thread)
 #rosbuild_add_executable(example examples/example.cpp)
 #target_link_libraries(example ${PROJECT_NAME})
-rosbuild_add_executable(example1_a src/exampler/example1_a.cpp)
-rosbuild_add_executable(example1_b src/exampler/example1_b.cpp)
-rosbuild_add_executable(example2_a src/exampler/example2_a.cpp)
-rosbuild_add_executable(example2_b src/exampler/example2_b.cpp)
-rosbuild_add_executable(example3_a src/exampler/example3_a.cpp)
-rosbuild_add_executable(example3_b src/exampler/example3_b.cpp)
-rosbuild_add_executable(get_battery src/test/Get_Battery/get_battery.cpp)
-rosbuild_add_executable(Fly1234 src/test/Fly/fly.cpp)
-rosbuild_add_executable(multithred src/test/Multithred/multithred.cpp)
-rosbuild_add_executable(flypath1 src/test/FlyPath/FlyPath1.cpp)
-rosbuild_add_executable(ARDrone_manual_test src/test/FromTheInternet/ARDrone_manual_test.cpp)
-rosbuild_add_executable(flypath2 src/test/FlyPath/FlyPath2.cpp)
-rosbuild_add_executable(CDIO-Gruppe-15 src/Final_Project/main.cpp src/Final_Project/Drone_controllor.cpp)
 #rosbuild_add_executable(Display_Images src/test/Image/image.cpp)
-rosbuild_add_executable(image_listener src/test/Image/image2.cpp)
 rosbuild_add_executable(qr_reader src/openCV/qr_reader.cpp)
+target_link_libraries(qr_reader ${catkin_LIBRARIES} -lzbar)
+rosbuild_add_executable(drone_fly src/test/Get_Battery.cpp)
