Corrected paths in CMakelists

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,6 +29,6 @@ rosbuild_gensrv()
 #rosbuild_add_executable(example examples/example.cpp)
 #target_link_libraries(example ${PROJECT_NAME})
 #rosbuild_add_executable(Display_Images src/test/Image/image.cpp)
-rosbuild_add_executable(qr_reader src/openCV/qr_reader.cpp)
+rosbuild_add_executable(qr_reader src/final_project/qr_reader.cpp)
 target_link_libraries(qr_reader ${catkin_LIBRARIES} -lzbar)
-rosbuild_add_executable(drone_fly src/test/Get_Battery.cpp)
+rosbuild_add_executable(drone_fly src/final_project/drone_fly.cpp)
