--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,3 +32,4 @@ rosbuild_gensrv()
 rosbuild_add_executable(qr_reader src/final_project/qr_reader.cpp)
 target_link_libraries(qr_reader ${catkin_LIBRARIES} -lzbar)
 rosbuild_add_executable(drone_fly src/final_project/drone_fly.cpp)
+rosbuild_add_executable(flypath1 src/test/FlyPath/FlyPath1.cpp)
