--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,3 +33,4 @@ rosbuild_add_executable(qr_reader src/final_project/qr_reader.cpp)
 target_link_libraries(qr_reader ${catkin_LIBRARIES} -lzbar)
 rosbuild_add_executable(drone_fly src/final_project/drone_fly.cpp)
 rosbuild_add_executable(flypath1 src/test/FlyPath/FlyPath1.cpp)
+rosbuild_add_executable(drone_fly_2 src/final_project/drone_fly_2.cpp)
