Translate the code that find squers to a ROS note

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,3 +34,4 @@ target_link_libraries(qr_reader ${catkin_LIBRARIES} -lzbar)
 rosbuild_add_executable(drone_fly src/final_project/drone_fly.cpp)
 rosbuild_add_executable(flypath1 src/test/FlyPath/FlyPath1.cpp)
 rosbuild_add_executable(drone_fly_2 src/final_project/drone_fly_2.cpp)
+rosbuild_add_executable(sqaure_finder src/opencv_squars/sqaure_finder.cpp)
