--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,7 +31,8 @@ rosbuild_gensrv()
 #rosbuild_add_executable(Display_Images src/test/Image/image.cpp)
 rosbuild_add_executable(qr_reader src/final_project/qr_reader.cpp)
 target_link_libraries(qr_reader ${catkin_LIBRARIES} -lzbar)
-rosbuild_add_executable(drone_fly src/final_project/drone_fly.cpp)
-rosbuild_add_executable(flypath1 src/test/FlyPath/FlyPath1.cpp)
+#rosbuild_add_executable(drone_fly src/final_project/drone_fly.cpp)
+#rosbuild_add_executable(flypath1 src/test/FlyPath/FlyPath1.cpp)
 rosbuild_add_executable(drone_fly_2 src/final_project/drone_fly_2.cpp)
-rosbuild_add_executable(square_finder src/final_project/square_finder.cpp)
+rosbuild_add_executable(circle_finder src/final_project/circle_finder.cpp)
+#rosbuild_add_executable(square_finder src/final_project/square_finder.cpp)
