--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,3 +36,5 @@ target_link_libraries(qr_reader ${catkin_LIBRARIES} -lzbar)
 rosbuild_add_executable(drone_fly_2 src/final_project/drone_fly_2.cpp)
 rosbuild_add_executable(circle_finder src/final_project/circle_finder.cpp)
 #rosbuild_add_executable(square_finder src/final_project/square_finder.cpp)
+rosbuild_add_executable(circle_finder_Martin src/Martins_fun/circle_finder2.cpp)
+rosbuild_add_executable(martin_fun src/Martins_fun/martin_fun.cpp)
