--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,6 +34,7 @@ target_link_libraries(qr_reader ${catkin_LIBRARIES} -lzbar)
 #rosbuild_add_executable(drone_fly src/final_project/drone_fly.cpp)
 #rosbuild_add_executable(flypath1 src/test/FlyPath/FlyPath1.cpp)
 rosbuild_add_executable(drone_fly_2 src/final_project/drone_fly_2.cpp)
+rosbuild_add_executable(drone_fly_4 src/final_project/drone_fly_4.cpp)
 rosbuild_add_executable(circle_finder src/final_project/circle_finder.cpp)
 #rosbuild_add_executable(square_finder src/final_project/square_finder.cpp)
 rosbuild_add_executable(circle_finder_Martin src/Martins_fun/circle_finder2.cpp)
