upload of test of alitiude

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,3 +39,4 @@ rosbuild_add_executable(circle_finder src/final_project/circle_finder.cpp)
 #rosbuild_add_executable(square_finder src/final_project/square_finder.cpp)
 rosbuild_add_executable(circle_finder_Martin src/Martins_fun/circle_finder2.cpp)
 rosbuild_add_executable(martin_fun src/Martins_fun/martin_fun.cpp)
+rosbuild_add_executable(test_off_alti src/Martins_fun/test_off_alti.cpp)
